---------------------------------------------------------------------------------------------------
Version: 0.1.13
Date: 2025-04-17
  Info:
    - If carbon is installed, add an option to replace hexalith oil with natural gas
    - Also make it so that you can remove natual gas from nauvis
    - Add an option to make Nauvis biotech restricted to Hexalith, useful with peaceful nauvis
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2025-04-11
  Info:
    - Add compat with diverse-external-rocket-parts
    - Update Nauvis's description
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2025-04-08
  Info:
    - Remove nonessential techs from essential list
    - Compat with SchallUraniumProcessing
    - Fix issues with 2.0.43
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2025-04-08
  Info:
    - Added compatability with extraplanetary-production
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2025-03-28
  Info:
    - Internal location changes
    - Add an achevement for visiting Hexalith, the images are unfinished at the moment though\
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2025-03-27
  Info:
    - Move compatibilities that don't relate to this mod into another one
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2025-03-27
  Info:
    - Make Nauvis have biters by default
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2025-03-26
  Info:
    - Fix a typo in worldgen-final-fixes.lua that made the setting hexalith-nuclear-science-peaceful-nauvis never be read