@@ -2,6 +2,8 @@
 hexalith-nuclear-science-peaceful-nauvis=Make Nauvis have no biters
 hexalith-nuclear-science-hexalith-difficulty=The difficulty of Hexalith
 hexalith-nuclear-science-natural-gas=Add natual gas to Hexalith
+hexalith-nuclear-science-strict-biotech=Make Nauvis biotech recipes locked to Hexalith only
+hexalith-nuclear-science-strict-biotech-wood=Lock wood processing to Hexalith
 
 [string-mod-setting]
 hexalith-nuclear-science-hexalith-difficulty-original=Original difficulty
@@ -10,3 +12,6 @@ hexalith-nuclear-science-hexalith-difficulty-baby=Nauvis difficulty
 hexalith-nuclear-science-natural-gas-no=Keep natual gas generation as default
 hexalith-nuclear-science-natural-gas-copy=Have natual gas on both Nauvis and Hexalith
 hexalith-nuclear-science-natural-gas-move=Move natual gas to Hexalith
+
+[mod-setting-description]
+hexalith-nuclear-science-strict-biotech-wood=Only has an effect when strict-biotech is enabled
