@@ -1,0 +1,8 @@
+data:extend({
+  {
+    type = "bool-setting",
+    name = "hexalith-nuclear-science-strict-biotech-wood",
+    setting_type = "startup",
+    default_value = false
+  }
+})v
